2025-08-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/ds390/gen.c,
	  src/ds390/ralloc.c,
	  src/f8/gen.c,
	  src/f8/gen.h,
	  src/hc08/gen.c,
	  src/mcs51/gen.c,
	  src/mos6502/gen.c,
	  src/pic14/gen.c,
	  src/pic14/ralloc.c,
	  src/pic16/ralloc.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  src/z80/gen.h:
	  Comment spelling fixes from patch #460 by Konstantin Kim.
	* support/regression/fwk/lib/testfwk.c:
	  Drop support infrastructure for ports with broken / %. There hasen't been a use case in decades.
	* support/regression/ports/pdk13/spec.mk,
	  support/regression/MakeList:
	  pdk13 regression test infrastructure cleanup.
	* device/lib/pdk13/Makefile.in:
	  Make pdk13 behave like other pdk wrt. build of __muluchar.
	* device/lib/pdk13/heap.s:
	  Reduce pdk13 default heap size to 16B.
	  
2025-08-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  doc/sdccman.lyx,
	  src/SDCCsymt.c,
	  src/SDCCval.c,
	  support/regression/tests/bug-3355.c,
	  support/valdiag/tests/constantRange.c:
	  Fix bug #3355.
	* src/z80/gen.c:
	  Fix another aspect of bug #3852.
	* src/stm8/peep.c:
	  Fix bug #3278.

2025-08-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/float.h,
	  device/lib/incl.mk,
	  support/regression/tests/bitintfromfloat.c.in,
	  device/lib/_fs2slonglong.c,
	  device/lib/_fs2ulonglong.c:
	  Fix third part of bug #3719.
	* debugger/mcs51/sdcdb.h,
	  debugger/mcs51/sdcdb.c,
	  debugger/mcs51/symtab.c:
	  Fix bug #3823.
	* src/z80/gen.c:
	  Fix bug #3854.

2025-08-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peep.c,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/__mulsint2slong.s,
	  device/lib/z80/__muluint2slong.s,
	  support/regression/tests/coremark.c.in,
	  support/regression/tests/muldiv.c.in:
	  Fix bug #3852.
	* src/pdk/gen.c,
	  support/regression/tests/bitintfromfloat.c.in: